# web-pub

./: Cargo.toml  README.md  foo.ts  run.sh
assets/: defaults.css  deps.html
assets/defaults/: index.html
crates/markdown-toc/: Cargo.toml
crates/markdown-toc/src/: lib.rs
example/music-notes/: web-pub.toml
example/music-notes/output/: index.html  reference.html
example/music-notes/scripts/: build.sh  open.sh  watch.sh
example/music-notes/source/: index.md  reference.md
example/music-notes/template/: index.html
example/school-notes/: web-pub.toml
example/school-notes/output/calc/: chapter1.html  chapter5.html
example/school-notes/output/test/: example.html
example/school-notes/output/trig/: chapter1.html  chapter2.html  chapter3.html  chapter4.html  chapter6.html  chapter7.html
example/school-notes/source/: index.html
example/school-notes/source/calc/: chapter1.md
example/school-notes/source/test/: example.md
example/school-notes/source/test/assets/: graph.js  graph.ts
example/school-notes/source/trig/: index.html
src/: code.rs  frontend.rs  main.rs
src/frontend/: markup.rs
