[package]
name = "web-pub"
version = "0.1.0"
authors = ["Colbyn Wadman <hello@colbyn.com>"]
edition = "2018"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
markdown = "0.3.0"
pulldown-cmark = "0.8.0"
glob = "0.3.0"
structopt = "0.3.18"
toml = "0.5.6"
# scraper = "0.12.0"
# ego-tree = "0.6"
html5ever = "0.25"
kuchiki = "0.8.1"
